fix: flex-wrap for footer

--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   width: 100%;
   height: 100px;
   background-color: #dddddd;
